# slaxide

./: .gitignore  Cargo.toml  LICENSE  PRD.md  README.md  TODO_0316.md
crates/slaxide-core/: Cargo.toml
crates/slaxide-core/src/: lib.rs  models.rs  ranking.rs  sample.rs  settings.rs  theme.rs
crates/slaxide-linux-gtk/: Cargo.toml
crates/slaxide-linux-gtk/src/: auth.rs  main.rs
crates/slaxide-platform/: Cargo.toml
crates/slaxide-platform/src/: lib.rs
crates/slaxide-slack/: Cargo.toml
crates/slaxide-slack/src/: lib.rs
crates/slaxide-store/: Cargo.toml
crates/slaxide-store/src/: lib.rs
docs/: config.example.toml
docs/tech_notes/: 2026-03-15-handoff.md
skills/slaxide/: SKILL.md
