[workspace]
members = [
    "crates/slaxide-core",
    "crates/slaxide-store",
    "crates/slaxide-slack",
    "crates/slaxide-platform",
    "crates/slaxide-linux-gtk",
]
default-members = [
    "crates/slaxide-core",
    "crates/slaxide-store",
    "crates/slaxide-slack",
    "crates/slaxide-platform",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.93"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
futures-util = "0.3.32"
gtk = { package = "gtk4", version = "0.10.3" }
keyring = "4.0.0-rc.3"
keyring-core = "0.7.2"
notify-rust = "4.12.0"
regex = "1.12.2"
relm4 = "0.10.1"
reqwest = { version = "0.13.2", default-features = false, features = ["charset", "form", "json", "rustls"] }
rusqlite = { version = "0.38.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.50.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.41"
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
