[package]
name = "slaxide-platform"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
keyring.workspace = true
keyring-core.workspace = true
notify-rust.workspace = true
slaxide-core = { path = "../slaxide-core" }
