[package]
name = "slaxide-store"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
slaxide-core = { path = "../slaxide-core" }
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true

